# CBC-ConsensusMD

./: .dockerignore  .env.template  .gitignore  .impeccable.md  CLAUDE_IMPLEMENTATION.md  Dockerfile  JUDGES.md  LICENSE  README.md  consensusmd_prompts.md  consensusmd_prompts_v2.md  consensusmd_schemas.md  demo_cases_skeletons.md  pyproject.toml
backend/: main.py  prompts.py  schemas.py
backend/agents/: base.py
backend/api/: websocket.py
backend/evaluation/: runner.py
backend/orchestrator/: debate.py  state.py
benchmark_testing/: Dataset_Viewing.ipynb  consensus_results.csv  diagnosis_results copy.csv  eval.py  gemini-test.py  gemini_diagnosis_results.csv  hardcoded_single_test.py  intermediate_testing.csv  open-ai-test.py  openai_diagnosis_results.csv  opus_consensus_results.csv  refused_rows.txt  single_eval.py  single_test.py  test.py
cases/demo/: case_01_postpartum_pe.json  case_01_postpartum_pe_ground_truth.json  case_02_stemi.json  case_02_stemi_ground_truth.json  case_03_addisons.json  case_03_addisons_ground_truth.json  case_04_neuro_deadlock.json  case_04_neuro_deadlock_ground_truth.json  case_05_endometriosis.json  case_05_endometriosis_ground_truth.json
cases/pubmed/: EVAL_LOG.md  README.md  eval_01_sam_vasculopathy.json  eval_01_sam_vasculopathy_ground_truth.json
frontend/: README.md  index.html  vite.config.ts
frontend/src/: App.tsx  (+5 more)
scripts/: run_case.py  smoke_test_agents.py
tests/: test_debate_state.py  test_evaluation.py  test_parse_stringified_nested.py  test_run_debate_integration.py  test_schema_validation.py  test_websocket.py
(+21 files in other folders)
